adding createTrainer controller and registerForTrainer Viewmodel

--- a/AppDev/Views/Admin/EditStaff.cshtml
+++ b/AppDev/Views/Admin/EditStaff.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "EditStaff";
 }
 
-<h2>Edit Training Staff</h2>
+<h2>Edit Training Staff Controlled by Admin</h2>
 <div class="form-group">
     @Html.ActionLink("Back to Index", "IndexForStaff", null, new { @class = "btn btn-info" })
 
