--- a/AppDev/Views/Admin/IndexForStaff.cshtml
+++ b/AppDev/Views/Admin/IndexForStaff.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "IndexForStaff";
 }
 
-<h2>The Main Page For Staff</h2>
+<h2>The Main Page For Staff Controlled by Admin</h2>
 <div class="form-group">
     @Html.ActionLink("Create a Staff", "CreateTrainingStaff", "Admin",
         new { @class = "btn btn-primary" })
