--- a/AppDev/Views/Admin/CreateTrainingStaff.cshtml
+++ b/AppDev/Views/Admin/CreateTrainingStaff.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "CreateTrainingStaff";
 }
 
-<h2>Create New Training Staff</h2>
+<h2>Create New Training Staff Controlled by Admin</h2>
 @using (Html.BeginForm("CreateTrainingStaff", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
