Adding TrainerDetail, EditTrainer controller and view

--- a/AppDev/Views/Admin/Index.cshtml
+++ b/AppDev/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
     @Html.ActionLink("Show Information Training Staff", "IndexForStaff", null,
             new { @class = "btn btn-info" })
 
-    @Html.ActionLink("Show Information Trainer", "Report", null,
+    @Html.ActionLink("Show Information Trainer", "IndexForTrainer", null,
         new { @class = "btn btn-info" })
 </div>
 <style>
