--- a/AppDev/Views/Admin/IndexForTrainer.cshtml
+++ b/AppDev/Views/Admin/IndexForTrainer.cshtml
@@ -35,7 +35,7 @@
                     <!--Get StaffId-->
                     @Html.ActionLink("See Details", "TrainerDetails", "Admin",
                         new { id = items.TrainerId }, new { @class = "btn btn-primary" })
-                    @Html.ActionLink("Change Password", "ChangePasswordForStaff", "Admin",
+                    @Html.ActionLink("Change Password", "ChangePasswordForTrainer", "Admin",
                         new { id = items.TrainerId }, new { @class = "btn btn-primary" })
 
                     <!--Get id to Edit-->
