--- a/AppDev/Views/Shared/_Layout.cshtml
+++ b/AppDev/Views/Shared/_Layout.cshtml
@@ -21,9 +21,19 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole(AppDev.Utils.Roles.Admin))
+                        {
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Show Trainer and Training Staff", "Index", "Admin")</li>
+                        }
+                        if (User.IsInRole(AppDev.Utils.Roles.TrainingStaff))
+                        {
+                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                            <li> </li>
+                        }
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
