Adding Changing Password for staff controller

--- a/AppDev/Views/Admin/EditStaff.cshtml
+++ b/AppDev/Views/Admin/EditStaff.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Edit Training Staff Controlled by Admin</h2>
 <div class="form-group">
-    @Html.ActionLink("Back to Index", "IndexForStaff", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Back to Index", "IndexForStaff", null, new { @class = "btn btn-primary active" })
 
 </div>
 @using (Html.BeginForm("EditStaff", "Admin", FormMethod.Post))
