--- a/AppDev/Views/Admin/EditTrainer.cshtml
+++ b/AppDev/Views/Admin/EditTrainer.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Edit Trainer Controlled by Admin</h2>
 <div class="form-group">
-    @Html.ActionLink("Back to Index", "IndexForTrainer", null, new { @class = "btn btn-info" })
+    @Html.ActionLink("Back to Index", "IndexForTrainer", null, new { @class = "btn btn-primary active" })
 
 </div>
 @using (Html.BeginForm("EditTrainer", "Admin", FormMethod.Post))
