--- a/AppDev/Views/Admin/ChangePasswordForStaff.cshtml
+++ b/AppDev/Views/Admin/ChangePasswordForStaff.cshtml
@@ -4,26 +4,35 @@
 }
 
 <h2>Change Password For Staff</h2>
-@using (Html.BeginForm("ChangePasswordForStaff", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-<hr />
+<div class="form-group">
+    @Html.ActionLink("Back to Index", "IndexForStaff", null, new { @class = "btn btn-primary active" })
+</div>
 
-<div class="form-group">
-    @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-    <div class="col-md-10">
-        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", placeholder = "New Password" })
-    </div>
-</div>
-<div class="form-group">
-    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-    <div class="col-md-10">
-        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" class="btn btn-primary" value="Change Password Staff Account" />
-    </div>
-</div>
-}
+    @using (Html.BeginForm("ChangePasswordForStaff", "Admin", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        <hr />
+        <div class="form-group">
+            @Html.LabelFor(m => m.CurrentPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.CurrentPassword, new { @class = "form-control", placeholder = "Current Password" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", placeholder = "New Password" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-primary" value="Change Password Staff Account" />
+            </div>
+        </div>
+    }
