Adding Home Page For Training Staff

--- a/AppDev/Views/Admin/Index.cshtml
+++ b/AppDev/Views/Admin/Index.cshtml
@@ -7,10 +7,10 @@
 
 <div class="form-group">
     @Html.ActionLink("Show Information Training Staff", "IndexForStaff", null,
-            new { @class = "btn btn-info" })
+            new { @class = "btn btn-primary btn-lg" })
 
     @Html.ActionLink("Show Information Trainer", "IndexForTrainer", null,
-        new { @class = "btn btn-info" })
+        new { @class = "btn btn-primary btn-lg" })
 </div>
 <style>
 body { background-image: url("https://wallpaperaccess.com/full/1426869.jpg"); 
