--- a/AppDev/Views/TrainningStaff/UpdateForCourseCategory.cshtml
+++ b/AppDev/Views/TrainningStaff/UpdateForCourseCategory.cshtml
@@ -1,14 +1,14 @@
 ﻿@model AppDev.Models.CourseCategory
 @{
-    ViewBag.Title = "CreateCourseCategory";
+    ViewBag.Title = "UpdateForCourseCategory";
 }
 <br />
 <div class="btn-group">
     @Html.ActionLink("Back to Index of Course Category", "IndexForCourseCategory", null,
                     new { @class = "btn btn-primary active" })
 </div>
-<h2>Create Course Category</h2>
-@using (Html.BeginForm("CreateCourseCategory", "TrainningStaff", FormMethod.Post))
+<h2>Update Information For Course Category</h2>
+@using (Html.BeginForm("UpdateForCourseCategory", "TrainningStaff", FormMethod.Post))
 {
     <div class="form-group">
         <label>Course Category Name:</label>
@@ -22,5 +22,5 @@
         @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
         
     </div>
-    <button type="submit" , class="btn btn-primary">Create</button>
+    <button type="submit" , class="btn btn-primary">Save</button>
 }
