Adding Create For Course and create view for it

--- a/AppDev/Views/TrainningStaff/Index.cshtml
+++ b/AppDev/Views/TrainningStaff/Index.cshtml
@@ -9,7 +9,7 @@
     @Html.ActionLink("Show Information of Trainee", "IndexForTrainingStaff", null,
             new { @class = "btn btn-primary btn-lg" })
 
-    @Html.ActionLink("Show Courses", "IndexForCourse", null,
+    @Html.ActionLink("Show Course Category", "IndexForCourseCategory", null,
         new { @class = "btn btn-primary btn-lg" })
 </div>
 <style>
