--- a/AppDev/Views/TrainningStaff/IndexForTrainingStaff.cshtml
+++ b/AppDev/Views/TrainningStaff/IndexForTrainingStaff.cshtml
@@ -10,7 +10,7 @@
         new { @class = "btn btn-primary" })
 </div>
 <div class="btn-group">
-    @Html.ActionLink("Back to Index of Training Staff", "Index", null,
+    @Html.ActionLink("Back to Index Page", "Index", null,
                     new { @class = "btn btn-primary active" })
 </div>
 <br /><br />
