--- a/AppDev/Views/Home/Index.cshtml
+++ b/AppDev/Views/Home/Index.cshtml
@@ -104,16 +104,9 @@
             if (User.IsInRole(AppDev.Utils.Roles.TrainingStaff))
             {
                 <div class="col-md-4">
-                    <h2>Traning Staff</h2>
+                    <h2>Training Staff</h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-                        molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-                        numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-                        optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-                        obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-                        nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-                        tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-                        quia.
+                        @Html.ActionLink("Manage Trainee and Course Category", "Index", "TrainningStaff", null, new { @class = "btn btn-primary" })
                     </p>
                 </div>
             }
