--- a/AppDev/Views/Shared/_Layout.cshtml
+++ b/AppDev/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         if (User.IsInRole(AppDev.Utils.Roles.TrainingStaff))
                         {
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li></li>
+                            <li>@Html.ActionLink("Manage Trainee and Course Category","Index","TrainningStaff")</li>
                         }
                     }
                 </ul>
