--- a/AppDev/Views/TrainningStaff/IndexForCourse.cshtml
+++ b/AppDev/Views/TrainningStaff/IndexForCourse.cshtml
@@ -13,6 +13,15 @@
         new { @class = "btn btn-primary" })
 </div>
 
+<br /><br />
+@using (Html.BeginForm("IndexForCourse", "TrainningStaff", FormMethod.Get))
+{
+    <div>
+        @Html.TextBox("SearchString", null, new { @class = "form-control", placeholder = "Search by Course Name or Course Description" })
+    </div>
+    <button type="submit" class="btn btn-primary">Search</button>
+}
+
 <table class="table">
     <thead>
         <!--List the whole inform in Model using foreach -->
@@ -35,7 +44,7 @@
                 <td>
                     @Html.ActionLink("Edit", "UpdateForCourse", new { id = items.Id },
                                    new { @class = "btn btn-success" })
-                    @Html.ActionLink("Delete Information", "Delete", new { id = items.Id},
+                    @Html.ActionLink("Delete Information", "DeleteForCourse", new { id = items.Id },
                                           new { @class = "btn btn-danger", onclick = "return confirm('Are you sure to delete?');" })
                 </td>
             </tr>
