--- a/AppDev/Views/Home/Index.cshtml
+++ b/AppDev/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <style>
         h1 {
             font-family: "Sofia";
-            font-size: 80px;
+            font-size: 70px;
             color: burlywood;
         }
 
@@ -20,8 +20,11 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-image: url("https://img4.goodfon.com/wallpaper/nbig/2/d8/abstraktsiia-geometriia-oboi-white-green-blue-squares-abstra.jpg")
+            background-image: url("https://img4.goodfon.com/wallpaper/nbig/2/d8/abstraktsiia-geometriia-oboi-white-green-blue-squares-abstra.jpg") 
+            
+        
         }
+
 
         .content {
             height: 200%;
@@ -30,8 +33,11 @@
         }
 
             .content .images {
-                height: 200%;
-                width: 200%;
+                height: 270%;
+                width: 230%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
 
         .images img {
@@ -42,7 +48,7 @@
 </head>
 <body>
     <br /><br />
-    <h1>Welcome to The Training System</h1><br />
+    <h1>     Welcome to The Training System</h1><br />
     <div class="content">
         <div class="images">
             <img src="https://scholarship-positions.com/wp-content/uploads/2019/12/Care-Leaver-Bursary-at-the-University-of-Greenwich-in-UK-1024x576.jpg" alt="first">
