AssignTrainer and Trainee

--- a/AppDev/Views/Admin/Index.cshtml
+++ b/AppDev/Views/Admin/Index.cshtml
@@ -6,11 +6,14 @@
 <h2>The Home Page of Admin</h2>
 
 <div class="form-group">
+    <h2>Admin</h2>
+    <p>
     @Html.ActionLink("Show Information Training Staff", "IndexForStaff", null,
             new { @class = "btn btn-primary btn-lg" })
 
     @Html.ActionLink("Show Information Trainer", "IndexForTrainer", null,
         new { @class = "btn btn-primary btn-lg" })
+    </p>
 </div>
 <style>
 body { background-image: url("https://wallpaperaccess.com/full/1426869.jpg"); 
